src/test/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-impl-trait.rs:14:52
   |
LL | impl T for () {
   |               - unclosed delimiter
...
LL |
   |                                                    ^

error: missing `fn`, `type`, or `const` for associated-item declaration
  --> $DIR/missing-close-brace-in-impl-trait.rs:5:17
   |
LL |   fn foo(&self) {}
   |  _________________^
LL | |
LL | |
LL | | trait T {
   | |_ missing `fn`, `type`, or `const`

error[E0405]: cannot find trait `T` in this scope
  --> $DIR/missing-close-brace-in-impl-trait.rs:3:6
   |
LL | impl T for () {
   |      ^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0405`.
